--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "hexlet_gendiff_stan",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "This is a training project provided by [Hexlet](https://hexlet.io).",
   "main": "index.js",
+  "files": [ "dist" ],
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
   },
