--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "hexlet_gendiff_stan",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "This is a training project provided by [Hexlet](https://hexlet.io).",
   "main": "index.js",
-  "files": [ "dist" ],
+  "files": [
+    "dist"
+  ],
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --colors --watch",
     "eslint": "eslint",
     "babel-node": "babel-node",
     "prepublishOnly": "npm run build",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -39,6 +44,7 @@
     "jest-cli": "^22.4.3"
   },
   "dependencies": {
-    "commander": "^2.15.1"
+    "commander": "^2.15.1",
+    "lodash": "^4.17.5"
   }
 }
