--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexlet_gendiff_stan",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "This is a training project provided by [Hexlet](https://hexlet.io).",
   "main": "index.js",
   "files": [
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "jest --colors",
-    "watch": "npm test --watch",
+    "watch": "jest --colors --watch",
     "eslint": "eslint",
     "babel-node": "babel-node",
     "prepublishOnly": "npm run build",
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "commander": "^2.15.1",
+    "ini": "^1.3.5",
     "js-yaml": "^3.11.0",
     "lodash": "^4.17.5"
   }
